# naoqi_bridge_msgs

./: CMakeLists.txt  package.xml
msg/: JointAnglesWithSpeed.msg
